fixed background image stretching

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,9 +1,12 @@
   .bookDiv {
     display: inline-block;
+    border: 4px gray solid;
 }
 
   .bookImg {
     display: block;
+    height: 200px;
+
 }
 
   .genreDiv {
@@ -19,7 +22,7 @@
 
 body {
   height: 100%;
-  background-size: cover;
+  background-size: auto;
   background-position: center center;
   background-image: url("../static/bookcase_t.jpg")
 
